# bayesify

./: AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
bayesify/: datahandler.py  pairwise.py
src/bayesify/: pairwise.py
tests/unit/: pairwisetest.py
